--- v0.1.2 [Not released] ---

* [FIX] Fixed issue where a non-ascii process command-line would cause the process pages to crash.

* [FIX] Fixed issue where network interface info can be defaulted to a empty dict but a key was expected to exist for sorting.

--- v0.1.1 [2014-03-29] ---

* [FIX] Fixed error when specifying a unreadable log file. psdash will now check that
        each log file is readable on startup.

* [FIX] Fixed issue where fetching network interface addresses did not work on 32 bit arch.

* [NEW] Added a PSDASH_ prefix on all psdash specific configuration options.

* [FIX] Added argparse to setup.py requirements for Python 2.6 compatibility