@@ -154,8 +154,8 @@
                                 <tr>
                                     <td>{{ ni.name }}</td>
                                     <td>{{ ni.ip }}</td>
-                                    <td>{{ ni.rx_per_sec|filesizeformat }}</td>
-                                    <td>{{ ni.tx_per_sec|filesizeformat }}</td>
+                                    <td>{{ ni.rx_per_sec|default(0)|filesizeformat }}</td>
+                                    <td>{{ ni.tx_per_sec|default(0)|filesizeformat }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
